# duet

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  scorecard.yml  security.yml
assets/: generate.py
crates/duet-agents/: Cargo.toml
crates/duet-agents/src/: cli.rs  critic.rs  lib.rs  local.rs
crates/duet-agents/tests/: local_backend.rs
crates/duet-cli/: Cargo.toml
crates/duet-cli/src/: main.rs  profile.rs  profiles.toml  repl.rs
crates/duet-core/: Cargo.toml
crates/duet-core/prompts/: address.txt  conductor_handoff.txt  conductor_progress.txt  conductor_strategy.txt  implement.txt  plan.txt  plan_review.txt  plan_revise.txt  review.txt
crates/duet-core/schemas/: review.json
crates/duet-core/src/: advisor.rs  agent.rs  catalog.rs  domain.rs  events.rs  git.rs  hardware.rs  lib.rs  orchestrate.rs  prompts.rs  render.rs  report.rs  style.rs
crates/duet-core/tests/: parser.rs
crates/duet-core/tests/fixtures/: claude_build.jsonl  claude_simple.jsonl  codex_review.jsonl  codex_simple.jsonl
crates/duet-tui/: Cargo.toml
crates/duet-tui/src/: lib.rs  shell.rs  theme.rs
docs/: REDESIGN.md  brand.md
