[workspace]
resolver = "2"
members = ["crates/duet-core", "crates/duet-agents", "crates/duet-tui", "crates/duet-cli"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ratatui = "0.30"
ureq = { version = "2", features = ["json"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
