[package]
name = "duet-agents"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "duet backend implementations — CLI agents (Claude Code, Codex) + local HTTP"

[lib]
name = "duet_agents"
path = "src/lib.rs"

[dependencies]
duet-core = { path = "../duet-core" }
anyhow = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }
