[package]
name = "duet-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "duet command-line front-end"

[[bin]]
name = "duet"
path = "src/main.rs"

[dependencies]
duet-core = { path = "../duet-core" }
duet-agents = { path = "../duet-agents" }
duet-tui = { path = "../duet-tui" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
